# FFlogsDiscordBot

./: .gitignore  Cargo.toml  readme
src/: datetime.rs  fflogs.rs  file.rs  main.rs  request.rs
src/fflogs/: fflogs.rs
src/file/: file_handler.rs  ranking_data.rs  uploader.rs  wipe_data.rs  wipe_graph.rs
src/request/: logs.rs  msg_handler.rs  post_api.rs  post_discord.rs  res_json.rs
