[package]
name = "FFlogsDiscordBot"
version = "1.0.0"
edition = "2021"
[dependencies]
anyhow = "1.0.78"
reqwest = {version = "0.11.22",  features = ["json"]}
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
oauth2 = "4.4.2"
base64 = "0.21.5"